--- a/styles/main.css
+++ b/styles/main.css
@@ -17,13 +17,13 @@ html, body {
     margin: 0; padding: 0;
     min-height: 100vh;
     font-size: var(--font-size, 16px);
-    font-family: var(--font-famaly) monospace;
+    font-family: var(--font-famaly), monospace;
     background-color: var(--main-bg, #111111); color: var(--main-fg, #AFAFAF);
 }
 .page {
     display: flex;
     flex-direction: column;
-    height: 200vh;
+    min-height: 100vh;
 }
 
 /* Waring */
@@ -86,9 +86,34 @@ html, body {
     height: 100%;
 }
 
+/* eclipse */
+#eclipse {
+    display: block;
+    position: fixed;
+    top: 0; left: 0; bottom: 0; right: 0; z-index: 600;
+    background-color: rgba(0,0,0,0.6);
+    opacity: 1; visibility: hidden;
+    transition: all var(--timeing, 0.3s);
+}
+
 /* Icon */
 .icon {width: 30px; height: 30px; fill: var(--main-fg, #FFFFFF);}
 .icon_close {width: 30px; height: 30px;}
 
-/* Test */
+/* Header */
+h1, h2, h3 {cursor: default;}
 
+/* Test */
+main {
+    width: 100%; max-width: 1100px;
+    margin: 3px;
+    margin-top: 70px;
+    padding: 20px;
+    align-self: center;
+}
+.main_head {border-bottom: 2px solid green;}
+.main_head>* {display: inline-block; margin-right: 20px;}
+
+@media (max-width: 760px) {
+    main {margin-top: 55px;}
+}
