--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,21 +1,15 @@
 .modals {display: block;}
 
 .modal {
-    position: fixed;
-    top: -100%; left: 0; bottom: 0; right: 0; z-index: 999;
-    background-color: rgba(6,6,6,0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    visibility: hidden;
-    transition: all .7s;
-}
-.modal_inner {
-    position: relative;
+    display: block;
+    position: absolute;
+    top: -100%; left: 50%; z-index: 850;
+    transform: translate(-50%, -50%);
     overflow: hidden;
     min-height: 140px; min-width: 300px;
     height: 70vh; width: 70vw;
     background-color: var(--main-bg2);
+    visibility: hidden;
 }
 
 .modal_head {
@@ -43,4 +37,3 @@
     text-overflow: clip;
     min-height: 95%;
 }
-
