--- a/styles/footer.css
+++ b/styles/footer.css
@@ -9,7 +9,7 @@ footer {
     margin: 0 auto;
     padding: 0 10px;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    background-color: var(--sub-color);
 }
