--- a/styles/main.css
+++ b/styles/main.css
@@ -106,6 +106,34 @@ html, body {
 .icon_inner {fill: rgba(0,0,0,0);}
 .icon_close {width: 30px; height: 30px;}
 
+/* ToolTips */
+.tooltip {position: relative;}
+.tooltip::before {
+    display: block; position: absolute;
+    top: -340%; left: -100%; z-index: 10;
+    content: attr(data-title);
+    border-radius: 5px;
+    box-shadow: 3px 2px 10px var(--main-fg);
+    background-color: var(--main-bg2); color: #FFFFFF;
+    padding: 5px 15px;
+    opacity: 0; visibility: hidden;
+    transition: all 0.5s;
+}
+.tooltip::after {
+    display: block; position: absolute;
+    top: -100%; left: 50%; z-index: 11;
+    transform: translateX(-50%);
+    content: "";
+    width: 0; height: 0;
+    border-style: solid;
+    border-width: 10px 5px 0 5px;
+    border-color: var(--main-color) rgba(0,0,0,0) rgba(0,0,0,0) rgba(0,0,0,0);
+    transition: all 0.5s;
+    opacity: 0; visibility: hidden;
+}
+.tooltip:hover::before {opacity: 1; visibility: visible;}
+.tooltip:hover::after {opacity: 1; visibility: visible;}
+
 /* Header */
 h1, h2, h3 {cursor: default;}
 
